--- a/public/css/survey.css
+++ b/public/css/survey.css
@@ -34,6 +34,7 @@ button.submit {
     color: white;
     line-height: 1.5em;
     font-size: 1em;
+    padding: 1em 2em;
 }
 
 .progress-indicator {
